test/type/wrong/overlap3.kk
// test overlap error
val x = 1
val x = True
